# tacky_adventure

./: .gitignore  Cargo.toml  README.md
assets/models/: exit.glb  i-sphere-smooth.glb  player.glb
assets/shaders/: dissolve.wgsl  exit.wgsl  eye.wgsl  fbm1.wgsl  galactic_dance.wgsl  m1.wgsl  platform.wgsl  shield.wgsl  virus.wgsl
assets/shaders/inc/: functions.wgsl
src/: _city.rs  _eye.rs  _platform.rs  aimer.rs  asteroid.rs  camera.rs  damage.rs  effects.rs  end.rs  env.rs  exit.rs  eye.rs  eyes.rs  feature.rs  help.rs  info.rs  intro.rs  lift.rs  main.rs  messages.rs  missile.rs  monologue.rs  platform.rs  player.rs  shared.rs  stage.rs  ui.rs  virus.rs
