[package]
name = "the_eyes"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
# opt-level = 'z' # wasm less size 

[dependencies]
bevy_egui = "0.36.0"
bevy-inspector-egui = "0.33.1"
bevy_panorbit_camera = "0.28"
bevy_gltf_animator_helper = {git = "https://github.com/xenon615/bevy_gltf_animator_helper"}
bevy-tnua = "0.25"
bevy-tnua-avian3d = "0.6.0"
avian3d= "0.3.1"
fastrand = "2.3.0"

[dependencies.bevy]
version = "0.16.1"
# git = "https://github.com/bevyengine/bevy.git"
# tag = "v0.17.0-rc.1"
default-features = false
features = [
    "dynamic_linking",
    # "animation",	        
    # "bevy_animation",
    "bevy_asset",	        
    # "bevy_audio",	        
    "bevy_color",	        
    "bevy_core_pipeline",
    "bevy_gizmos",   
    "bevy_gltf",      
    # "bevy_input_focus",
    # "bevy_mesh_picking_backend",
    "bevy_pbr",
    # "bevy_picking",
    "bevy_render",
    # "bevy_scene",
    # "bevy_sprite",
    # "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    # "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    # "custom_cursor",
    "default_font",
    "hdr",
    "ktx2",
    "multi_threaded",
    "png",
    "smaa_luts",
    # "sysinfo_plugin",
    "tonemapping_luts",
    # "tracing",
    # "vorbis",
    # "webgl2",
    # "x11",
    # "zstd_rust",
    "std",
    # "async_executor"
]

[dependencies.bevy_hanabi]
version = "0.16.0"
default-features = false 
features = ["3d", "serde"] 
 



