[package]
name = "tacky_adventure"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
# opt-level = 'z' # wasm less size 

[dependencies]
bevy_egui = "0.38.0"
bevy-inspector-egui = "0.35.0"
bevy_panorbit_camera = "0.33"
bevy_gltf_animator_helper = {git = "https://github.com/xenon615/bevy_gltf_animator_helper.git", tag = "v0.3.0"}

fastrand = "2.3.0"
noise ="0.9.0"
avian3d = "0.4"
bevy-tnua = "0.26"
bevy-tnua-avian3d = "0.8.0"


[dependencies.bevy]
version = "0.17.3"
default-features = false
features = [
    "dynamic_linking",
    # "android-game-activity"	#Android GameActivity support. Default, choose between this and android-native-activity.
    # "android_shared_stdcxx"	#Enable using a shared stdlib for cxx on Android
    # "animation"	#Enable animation support, and glTF animation loading
    "async_executor",	#Uses async-executor as a task execution backend.
    # "bevy_animation"	#Provides animation functionality
    # "bevy_anti_alias"	#Provides various anti aliasing solutions
    "bevy_asset",	#Provides asset functionality
    # "bevy_audio"	#Provides audio functionality
    # "bevy_camera",	#Provides camera and visibility types, as well as culling primitives.
    # "bevy_color"	#Provides shared color types and operations
    "bevy_core_pipeline",	#Provides cameras and other basic render pipeline features
    # "bevy_gilrs",	#	Adds gamepad support
    "bevy_gizmos",	#	Adds support for rendering gizmos
    "bevy_gltf",	#	glTF support
    # "bevy_image"	#	Load and access image data. Usually added by an image format
    # "bevy_input_focus"	#	Enable input focus subsystem
    # "bevy_light"	#	Provides light types such as point lights, directional lights, spotlights.
    # "bevy_log"	#	Enable integration with tracing and log
    # "bevy_mesh"	#	Provides a mesh format and some primitive meshing routines.
    # "bevy_mesh_picking_backend"	#	Provides an implementation for picking meshes
    "bevy_pbr",	#	Adds PBR rendering
    # "bevy_picking"	#	Provides picking functionality
    "bevy_post_process",	#	Provides post process effects such as depth of field, bloom, chromatic aberration.
    "bevy_render",	#	Provides rendering functionality
    # "bevy_scene",	#	Provides scene functionality
    "bevy_shader",	#	Provides shaders usable through asset handles.
    # "bevy_sprite"	#	Provides sprite functionality
    # "bevy_sprite_picking_backend"	#	Provides an implementation for picking sprites
    # "bevy_sprite_render"	#	Provides sprite rendering functionality
    "bevy_state",	#	Enable built in global state machines
    "bevy_text",	#	Provides text functionality
    "bevy_ui",	#	A custom ECS-driven UI framework
    # "bevy_ui_picking_backend"	#	Provides an implementation for picking UI
    "bevy_ui_render",	#	Provides rendering functionality for bevy_ui
    "bevy_window",	#	Windowing layer
    "bevy_winit",	#	winit window and input backend
    # "custom_cursor"	#	Enable winit custom cursor support
    # "debug",	#Enable collecting debug information about systems and components to help with diagnostics
    "default_font",	#	Include a default font, containing only ASCII characters, at the cost of a 20kB binary size increase
    "hdr",	#	HDR image format support
    "ktx2",	#	KTX2 compressed texture support
    "multi_threaded",	#	Enables multithreaded parallelism in the engine. Disabling it forces all engine tasks to run on a single thread.
    "png",	#	PNG image format support
    "reflect_auto_register",	#	Enable automatic reflect registration
    # "smaa_luts"	#	Include SMAA Look Up Tables KTX2 Files
    "std",	#	Allows access to the std crate.
    # "sysinfo_plugin"	#	Enables system information diagnostic plugin
    "tonemapping_luts",	#	Include tonemapping Look Up Tables KTX2 files. If everything is pink, you need to enable this feature or change the Tonemapping method for your Camera2d or Camera3d.
    # "vorbis"	#	OGG/VORBIS audio format support
    # "wayland"	#	Wayland display server support
    # "webgl2"	#	Enable some limitations to be able to use WebGL2. Please refer to the WebGL2 and WebGPU section of the examples README for more information on how to run Wasm builds with WebGPU.
    # "x11"	#	X11 display server support
    # "zstd_rust"	#	For KTX2 Zstandard decompression using pure rust ruzstd. This is the safe default. For maximum performance, use “zstd_c”.
    "zstd_c"
]


[dependencies.bevy_hanabi]
version = "0.17.0"
default-features = false 
features = ["3d", "serde"] 
 



